--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,26 @@ jobs:
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  clean-files:
+    name: Ensure test assets build cleanly
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install pulumi
+        uses: pulumi/actions@v5
+        with:
+          pulumi-version: ^3.0.0
+      - name: Check out source code
+        uses: actions/checkout@master
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.22.x
+          cache-dependency-path: |
+            **/go.sum
+      - run: make -C pf build.testproviders
+      - name: Ensure Clean Repo
+        run: git diff-files --quiet
+      - name: Show Dirty Repo File Changes
+        if: failure()
+        run: git diff-files --patch
