Refactor our Build and Test Bridge job into a reusable workflow
This reduces duplication and ensures that master.yml and ci.yml remain in sync. This
ensures that master runs the same set of tests as ci, causing master to also run tests for
both go versions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,52 +7,9 @@ on: [pull_request]
 
 jobs:
   build:
-    name: Build and Test Bridge
-    strategy:
-      matrix:
-        # To avoid depending on features introduced in newer golang versions, we need to
-        # test our minimum supported golang versions.
-        #
-        # When we decide to bump our minimum go version, we need to remember to bump the
-        # go version in our go.mod files.
-        go-version: [1.21.x, 1.22.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Install pulumi
-        uses: pulumi/actions@v5
-        with:
-          pulumi-version: ^3.0.0
-      - name: Check out source code
-        uses: actions/checkout@master
-      - name: Install Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-          cache-dependency-path: |
-            **/go.sum
-      - name: Build
-        run: make build
-      - name: Build PF
-        run: cd pf && make build
-      - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-            skip-cache: true
-            skip-pkg-cache: true
-            skip-build-cache: true
-            version: v1.57
-      - name: Lint
-        run: make lint
-      - name: Test
-        run: make test
-      - name: Test PF
-        run: cd pf && make test
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
+    name: Test and Lint
+    uses: ./.github/workflows/build-and-test.yml
+    secrets: inherit
   clean-files:
     name: Ensure test assets build cleanly
     runs-on: ubuntu-latest
