--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,43 +15,5 @@ env:
 
 jobs:
   build:
-    name: Build and Test Bridge
-    strategy:
-      matrix:
-        go-version: [1.21.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - name: Check out source code
-        uses: actions/checkout@master
-      - name: Install Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-          cache-dependency-path: |
-            **/go.sum
-      - name: Install pulumi
-        uses: pulumi/actions@v5
-        with:
-          pulumi-version: ^3.0.0
-      - name: Build
-        run: make build
-      - name: Build PF
-        run: cd pf && make build
-      - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v4
-        with:
-            skip-cache: true
-            skip-pkg-cache: true
-            skip-build-cache: true
-            version: v1.57
-      - name: Lint
-        run: make lint
-      - name: Test
-        run: make test
-      - name: Test PF
-        run: cd pf && make test
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    uses: ./.github/workflows/build-and-test.yml
+    secrets: inherit
