--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,6 +28,9 @@ jobs:
         uses: pulumi/actions@v5
         with:
           pulumi-version: ^3.0.0
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_wrapper: false
       - name: Check out source code
         uses: actions/checkout@master
       - name: Install Go
