Dynamic Bridged Providers: Plugin Aquisition
Broken off from https://github.com/pulumi/pulumi-terraform-bridge/pull/1973 for easier review.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,6 +44,8 @@ jobs:
         run: make test
       - name: Test PF
         run: cd pf && make test
+      - name: Test Dynamic
+        run: cd dynamic && make test
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
