--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install pulumi
         uses: pulumi/actions@v5
         with:
-          pulumi-version: ^3.0.0
+          pulumi-version: dev
       - name: Check out source code
         uses: actions/checkout@master
       - name: Install Go
