Add a linter to enforce consistent import order
I have also added a command to run `golangci-lint run --fix` in our various repositories.

`megacheck` has been broken into `gosimple`, `staticcheck` and `unused`. I split them up
to remove the deprecated warning.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,11 +6,14 @@ linters:
   enable:
     - errcheck
     - gofmt
+    - gci
     - gosec
     - govet
     - ineffassign
     - lll
-    - megacheck
+    - gosimple
+    - staticcheck
+    - unused
     - misspell
     - nakedret
     - nolintlint
@@ -25,3 +28,10 @@ issues:
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
     - pkg/tf2pulumi/internal/configs
+linters-settings:
+  gci:
+    sections:
+      - standard
+      - default
+      - prefix(github.com/pulumi/pulumi-terraform-bridge)
+    skip-generated: true
