Create and provide a format for Parameterize values
This commit adds support for the new `.Parameterization` field on the schema. As part of
doing so, I have moved parsing parameterization into it's own package.

Fixes https://github.com/pulumi/pulumi-terraform-bridge/issues/2149

--- a/dynamic/Makefile
+++ b/dynamic/Makefile
@@ -6,7 +6,7 @@ build: bin
 		${LDFLAGS} \
 		github.com/pulumi/pulumi-terraform-bridge/dynamic
 
-test.unit:
+test_unit:
 	cd internal/shim && go test ${LDFLAGS} ./...
 	go test -short ${LDFLAGS} ./...
 
@@ -14,7 +14,7 @@ test:
 	cd internal/shim && go test -v ${LDFLAGS} ./...
 	go test -v ${LDFLAGS} ./...
 
-test.update:
+test_accept:
 	go test -v ${LDFLAGS} ./... -update
 
 bin:
