Fix flaky tests by disabling automatic plugin acquisition for all tests (#2190)
Disable automatic acquisition globally in the repository - this should
ensure we do not use the GH API during tests and make our tests here a
lot more robust.

Instead manually install all required plugins in the Makefile as a
dependency of the tests. This ensures we only do it once and do not spam
the GH API with redundant requests causing test flakes.

I've hit this more than 5 times on separate PRs in the last few days.
It's seriously slowing down progress in the repo.

When we do hit the GH rate limit, we have to wait for up to an hour for
it to reset.

~Skip `TestConvertViaPulumiCLI` until
https://github.com/pulumi/pulumi/issues/16469 is addressed.~
~Skip `TestResourceWithoutID` until
https://github.com/pulumi/pulumi-terraform-bridge/issues/2191 is
addressed.~

Looks like we were using the wrong env variable name...

One of the tests was also absolutely spamming the GH API:
https://github.com/pulumi/pulumi-terraform-bridge/actions/runs/9973182117/job/27557985796?pr=2190

Latest failures:
https://github.com/pulumi/pulumi-terraform-bridge/actions/runs/9972810153/job/27556840950?pr=2186

fixes #2191

--- a/pf/Makefile
+++ b/pf/Makefile
@@ -1,6 +1,10 @@
 TESTPARALLELISM := 10
+export PULUMI_DISABLE_AUTOMATIC_PLUGIN_ACQUISITION := true
 
-build.tests::
+install_plugins::
+	pulumi plugin install resource random 4.16.3
+
+build.tests:: install_plugins
 	go test -test.run NONE
 	cd tests && go test -test.run NONE
 	cd tests/integration && go test -test.run NONE
