--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,7 @@ issues:
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
     - pkg/tf2pulumi/internal/configs
+    - pkg/terraform-plugin-go/tfprotov6
 linters-settings:
   gci:
     sections:
