Use OpenTofu planner with Plugin Framework providers (#2188)
OpenTofu planner code is now used with Plugin Framework providers to
emulate Terraform CLI behavior for `objchange.ProposedNew`. Note that
this code was already in use for SDKv2-based resources prior to the
change. The vendored code replaces a custom implementation that is now
removed.

Fixes https://github.com/pulumi/pulumi-terraform-bridge/issues/2172

Observable changes: Plugin Framework based resources may now reorder
outputs for Set collections.

This change is known to fix bugs such as
https://github.com/pulumi/pulumi-terraform-bridge/issues/2192 - to be
confirmed with a regression test in a follow-up PR.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,7 @@ issues:
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
     - pkg/tf2pulumi/internal/configs
+    - pkg/vendored
 linters-settings:
   gci:
     sections:
