Error when attempting to generate a dynamic type
Previously, the error message when attempting to generate a dynamic type (say in the
dynamic `hashicorp/kubernetes` provider) looked like this:

```console
pulumi package get-schema terraform-provider hashicorp/kubernetes
panic: UNKNOWN TYPE of tftypes.primitive{name:"DynamicPseudoType", _:[]struct {}(nil)}

goroutine 193 [running]:

github.com/pulumi/pulumi-terraform-bridge/pf/proto.element.Type({{0x104defc90?, 0x14000d78a50?}, 0x70?})

        /home/runner/work/pulumi-terraform-provider/pulumi-terraform-provider/bridge/pf/proto/element.go:56 +0x274
```

Schema generation [doesn't currently handle dynamic types
[pulumi/pulumi-terraform-bridge#2127](https://github.com/pulumi/pulumi-terraform-bridge/issues/2127),
but the error message now looks like this:

```console
pulumi package get-schema terraform-provider hashicorp/kubernetes
error: rpc error: code = Unknown desc = failed to gather package metadata: problem gathering resources: 1 error occurred:
        * kubernetes_manifest: Error in schema generation: Dynamic types are not implemented
```

Fixes https://github.com/pulumi/pulumi-terraform-provider/issues/7

--- a/dynamic/Makefile
+++ b/dynamic/Makefile
@@ -6,6 +6,11 @@ build: bin
 		${LDFLAGS} \
 		github.com/pulumi/pulumi-terraform-bridge/dynamic
 
+install: build
+	pulumi plugin rm resource terraform-provider --all --yes
+	pulumi plugin install resource terraform-provider v0.0.0-dev \
+		--file bin/pulumi-resource-terraform-provider --reinstall
+
 test_unit:
 	cd internal/shim && go test ${LDFLAGS} ./...
 	go test -short ${LDFLAGS} ./...
