--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,6 +20,7 @@ jobs:
         # go version in our go.mod files.
         go-version: [1.22.x, 1.23.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
+        feature-flags: ["DUMMY", "PULUMI_TF_BRIDGE_ACCURATE_BRIDGE_PREVIEW"]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Install pulumi
@@ -34,6 +35,9 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache-dependency-path: |
             **/go.sum
+      # export the feautre flags to the environment if they are set
+      - name: export feature flags
+        run: export ${{ matrix.feature-flags }}=true >> $GITHUB_ENV
       - name: Build
         run: make build
       - name: Build PF
