--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,12 +35,12 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache-dependency-path: |
             **/go.sum
-      - name: skip on non-linux for non-default feature flags
-        if: ${{ matrix.platform != 'ubuntu-latest' && matrix.feature-flags != 'DEFAULT' }}
-        run: exit 0
       - name: export feature flags
-        run: export ${{ matrix.feature-flags }}=true >> $GITHUB_ENV
-        if: ${{ matrix.feature-flags != 'DEFAULT' }}
+        run: echo ${{ matrix.feature-flags }}=true >> $GITHUB_ENV
+        if: ${{ matrix.platform != 'windows-latest' && matrix.feature-flags != 'DEFAULT' }}
+      - name: export feature flags
+        run: echo ${{ matrix.feature-flags }}=true >> $env:GITHUB_ENV
+        if: ${{ matrix.platform == 'windows-latest' && matrix.feature-flags != 'DEFAULT' }}
       - name: Build
         run: make build
       - name: Build PF
