--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,11 +25,15 @@ issues:
     - "unused-parameter: parameter"
     - "redefines-builtin-id:"
   exclude-dirs:
-    - pkg/tests/internal/webaclschema
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
     - pkg/tf2pulumi/internal/configs
     - pkg/vendored
+    # TODO(https://github.com/pulumi/pulumi-terraform-bridge/issues/2474)
+    - pf/tests/
+    - pkg/tests/
+    - testing/
+    - x/muxer/tests/
 linters-settings:
   gci:
     sections:
