--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,11 +44,11 @@ jobs:
       - name: Build
         run: make build
       - name: Build PF
-        run: cd pf && make build
+        run: cd pkg/pf && make build
       - name: Test
         run: make test
       - name: Test PF
-        run: cd pf && make test
+        run: cd pkg/pf && make test
       - name: Test Dynamic
         run: cd dynamic && make test
       - name: Upload coverage reports to Codecov
@@ -74,9 +74,9 @@ jobs:
       - name: Install golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
-            skip-cache: true
-            skip-pkg-cache: true
-            skip-build-cache: true
-            version: v1.60
+          skip-cache: true
+          skip-pkg-cache: true
+          skip-build-cache: true
+          version: v1.60
       - name: Lint
         run: make lint
