--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           go-version: 1.23.x
           cache-dependency-path: |
             **/go.sum
-      - run: make -C pf build.testproviders
+      - run: make -C pkg/pf build.testproviders
       - name: Ensure Clean Repo
         run: git diff-files --quiet
       - name: Show Dirty Repo File Changes
