parallel tests wip

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,10 +20,12 @@ linters:
     - revive
     - unconvert
     - unused
+    - paralleltest
 issues:
   exclude:
     - "unused-parameter: parameter"
     - "redefines-builtin-id:"
+    - "paralleltest"
   exclude-dirs:
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
@@ -37,6 +39,7 @@ issues:
     - pf
     - x/muxer
     - testing
+    - pkg/tfshim/tfplugin5
 linters-settings:
   gci:
     sections:
@@ -44,3 +47,5 @@ linters-settings:
       - default
       - prefix(github.com/pulumi/pulumi-terraform-bridge)
     skip-generated: true
+  paralleltest:
+    ignore-missing-subtests: true
