--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,27 +4,38 @@ run:
 linters:
   enable-all: false
   enable:
+    - durationcheck
+    - depguard
     - errcheck
-    - gofmt
+    # - exhaustive
     - gci
+    - gofumpt
+    - goheader
+    - goprintffuncname
     - gosec
+    - gosimple
     - govet
+    - importas
     - ineffassign
     - lll
-    - gosimple
-    - staticcheck
-    - unused
     - misspell
     - nakedret
     - nolintlint
+    - perfsprint
+    # - prealloc
     - revive
+    - staticcheck
+    - tenv
     - unconvert
     - unused
     - paralleltest
+    - wastedassign
+    - whitespace
 issues:
   exclude:
     - "unused-parameter: parameter"
     - "redefines-builtin-id:"
+    - "exhaustive"
   exclude-dirs:
     - pkg/tf2pulumi/internal/addrs
     - pkg/tf2pulumi/internal/config
@@ -47,3 +58,51 @@ linters-settings:
     skip-generated: true
   paralleltest:
     ignore-missing-subtests: true
+  nakedret:
+    # Make an issue if func has more lines of code than this setting, and it has naked returns.
+    # Default: 30
+    max-func-lines: 60
+  govet:
+    enable:
+      - nilness
+      # Reject comparisons of reflect.Value with DeepEqual or '=='.
+      - reflectvaluecompare
+      # Reject sort.Slice calls with a non-slice argument.
+      - sortslice
+      # Detect write to struct/arrays by-value that aren't read again.
+      - unusedwrite
+  depguard:
+    rules:
+      protobuf:
+        deny:
+          - pkg: "github.com/golang/protobuf"
+            desc: Use google.golang.org/protobuf instead
+  # importas:
+  #   alias:
+  #   - pkg: github.com/pulumi/pulumi/sdk/v3/proto/go
+  #     alias: pulumirpc
+  #   - pkg: github.com/pulumi/pulumi/sdk/v3/proto/go/testing
+  #     alias: testingrpc
+  #   - pkg: github.com/deckarep/golang-set/v2
+  #     alias: mapset
+  #   - pkg: github.com/pulumi/pulumi/sdk/v3/go/common/testing
+  #     alias: ptesting
+  # goheader:
+  #   values:
+  #     regexp:
+  #       COPYRIGHT_YEARS: (\d{4}-)?\d{4}
+  #       WHITESPACE: \s*
+  #   template: |-
+  #     Copyright {{ COPYRIGHT_YEARS }}, Pulumi Corporation.
+
+  #     Licensed under the Apache License, Version 2.0 (the "License");
+  #     you may not use this file except in compliance with the License.
+  #     You may obtain a copy of the License at
+
+  #     {{ WHITESPACE }}http://www.apache.org/licenses/LICENSE-2.0
+
+  #     Unless required by applicable law or agreed to in writing, software
+  #     distributed under the License is distributed on an "AS IS" BASIS,
+  #     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  #     See the License for the specific language governing permissions and
+  #     limitations under the License.
