--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,7 +5,7 @@ linters:
   enable-all: false
   enable:
     - durationcheck
-    - depguard
+    # - depguard
     - errcheck
     # - exhaustive
     - gci
@@ -21,7 +21,7 @@ linters:
     - misspell
     - nakedret
     - nolintlint
-    - perfsprint
+    # - perfsprint
     # - prealloc
     - revive
     - staticcheck
@@ -71,22 +71,16 @@ linters-settings:
       - sortslice
       # Detect write to struct/arrays by-value that aren't read again.
       - unusedwrite
-  depguard:
-    rules:
-      protobuf:
-        deny:
-          - pkg: "github.com/golang/protobuf"
-            desc: Use google.golang.org/protobuf instead
-  # importas:
-  #   alias:
-  #   - pkg: github.com/pulumi/pulumi/sdk/v3/proto/go
-  #     alias: pulumirpc
-  #   - pkg: github.com/pulumi/pulumi/sdk/v3/proto/go/testing
-  #     alias: testingrpc
-  #   - pkg: github.com/deckarep/golang-set/v2
-  #     alias: mapset
-  #   - pkg: github.com/pulumi/pulumi/sdk/v3/go/common/testing
-  #     alias: ptesting
+  # depguard:
+  #   rules:
+  #     protobuf:
+  #       deny:
+  #         - pkg: "github.com/golang/protobuf"
+  #           desc: Use google.golang.org/protobuf instead
+  importas:
+    alias:
+    - pkg: github.com/pulumi/pulumi/sdk/v3/proto/go
+      alias: pulumirpc
   # goheader:
   #   values:
   #     regexp:
