--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,7 +19,9 @@ jobs:
         # When we decide to bump our minimum go version, we need to remember to bump the
         # go version in our go.mod files.
         go-version: [1.22.x, 1.23.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        # platform: [ubuntu-latest, macos-latest, windows-latest]
+        # TODO: skip non-linux for now
+        platform: [ubuntu-latest]
         feature-flags: ["DEFAULT", "PULUMI_TF_BRIDGE_ACCURATE_BRIDGE_PREVIEW"]
     runs-on: ${{ matrix.platform }}
     steps:
