--- a/codecov.yml
+++ b/codecov.yml
@@ -6,3 +6,7 @@ coverage:
     patch:
       default:
         informational: true
+ignore:
+  - "pkg/vendored"
+  # deprecated
+  - "pkg/tfshim/tfplugin5"
