--- a/examples/use-tf-module/package.json
+++ b/examples/use-tf-module/package.json
@@ -9,6 +9,7 @@
         "@pulumi/aws": "^6.0.0",
         "@pulumi/awsx": "^2.0.2",
         "@pulumi/pulumi": "^3.113.0",
+        "hcl": "file:sdks/hcl",
         "vpcaws": "file:sdks/vpcaws"
     }
 }
