--- a/.github/workflows/weekly-pulumi-update.yml
+++ b/.github/workflows/weekly-pulumi-update.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Bridge Pulumi Upgrade
       if: steps.gomod.outputs.changes != 0
       run: >-
-        make build && make lint && make test
+        make build
 
         git add .
 
