--- a/dynamic/examples/use-tf-module/package.json
+++ b/dynamic/examples/use-tf-module/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@pulumi/aws": "^6.0.0",
         "@pulumi/awsx": "^2.0.2",
+        "@pulumi/hcl": "file:sdks/hcl",
         "@pulumi/pulumi": "^3.113.0",
         "hcl": "file:sdks/hcl",
         "vpcaws": "file:sdks/vpcaws"
