--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,12 @@ jobs:
     name: Ensure test assets build cleanly
     runs-on: ubuntu-latest
     steps:
+      - name: Check out source code
+        uses: actions/checkout@master
       - name: Install pulumi
         uses: pulumi/actions@v5
         with:
-          pulumi-version: v3.156.0
-      - name: Check out source code
-        uses: actions/checkout@master
+          pulumi-version-file: .pulumi.version
       - name: Install Go
         uses: actions/setup-go@v5
         with:
