--- a/.github/workflows/update-providers-auto.yml
+++ b/.github/workflows/update-providers-auto.yml
@@ -22,6 +22,21 @@ jobs:
     runs-on: ubuntu-latest
     name: Upgrade ${{ matrix.provider }} to pulumi-terraform-bridge to the latest version automatically
     steps:
+      - name: Check for provider hotfixes
+        id: hotfix_check
+        run: |
+          # Get the latest release notes using gh CLI
+          RELEASE_NOTES=$(gh release view --repo pulumi/pulumi-terraform-bridge --json body --jq '.body')
+          
+          # Check for [PROVIDER HOTFIX] in release notes
+          if echo "$RELEASE_NOTES" | grep -q "\[PROVIDER HOTFIX\]"; then
+            echo "has_hotfix=true" >> $GITHUB_OUTPUT
+            echo "Found provider hotfix in release notes. Will trigger provider releases"
+          else
+            echo "has_hotfix=false" >> $GITHUB_OUTPUT
+            echo "No provider hotfix found. Will not trigger provider releases"
+          fi
+
       - name: Trigger upgrade
         uses: peter-evans/repository-dispatch@v3
         with:
@@ -32,7 +47,8 @@ jobs:
           client-payload: |-
             {
                "pr-reviewers": ${{ toJSON( github.actor ) == 'pulumi-bot' && 'VenelinMartinov' || toJSON( github.actor || 'VenelinMartinov' ) }},
-               "automerge": true
+               "automerge": true,
+               "patch-release": ${{ steps.hotfix_check.outputs.has_hotfix }}
             }
     needs: generate-providers-list
     strategy:
