specify the shell to work on windows

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -116,6 +116,7 @@ jobs:
           cache: ${{ matrix.platform != 'windows-latest' }}
       - name: Find pulumi version
         id: pulumi_version
+        shell: bash
         run: |
           GO_MODULE_VERSION=$(go list -m -f '{{.Version}}' github.com/pulumi/pulumi/pkg/v3)
           GO_VERSION=$(echo "$GO_MODULE_VERSION" | sed 's/^v//')
